--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <!--ENCABEZADO-->
       <header>
-        <h1>TITULO</h1>
+        <h1>Bienvenidos</h1>
       </header>
       <!--NAVEGACION-->
       <nav>
@@ -28,7 +28,7 @@
 
       <!--CONTENIDO-->
     <section id="contenido" >
-        <h2>SEPTION</h2>
+        <h2>Wilson Volquez. 19-SISM-1-082</h2>
        <!--ARTICULOS-->
 <!-- <article>
         <h2>ARTICLE</h2>
